--- a/client/src/app/components/shared/shell/shell.component.html
+++ b/client/src/app/components/shared/shell/shell.component.html
@@ -1,4 +1,3 @@
-
 <mat-sidenav-container class="sidenav-container">
   <mat-sidenav
     #drawer
@@ -22,10 +21,11 @@
       }
 
       <span class="flex items-center gap-2">
-        <mat-icon class="material-icons-outlined">local_hospital</mat-icon>
-        <span class="text-xl">OrganizaMed</span>
+        <mat-icon class="material-icons-outlined">directions_car</mat-icon>
+        <span class="text-xl">Locadora de Veículos</span>
       </span>
     </mat-toolbar>
+
     <mat-nav-list>
       @for (item of itensNavbar; track $index) {
       <a mat-list-item [routerLink]="item.link" routerLinkActive="nav-link-active" class="my-1">
@@ -35,6 +35,7 @@
       }
     </mat-nav-list>
   </mat-sidenav>
+
   <mat-sidenav-content>
     <mat-toolbar color="primary">
       @if (isHandset$ | async) {
@@ -49,10 +50,11 @@
       </button>
 
       <span class="flex items-center gap-2">
-        <mat-icon class="material-icons-outlined">local_hospital</mat-icon>
-        <span class="text-xl">OrganizaMed</span>
+        <mat-icon class="material-icons-outlined">directions_car</mat-icon>
+        <span class="text-xl">Locadora de Veículos</span>
       </span>
       }
+
       <button mat-raised-button [matMenuTriggerFor]="opcoesUsuario" class="ml-auto">
         <mat-icon>person</mat-icon>
         {{ usuarioAutenticado.userName }}
@@ -65,6 +67,7 @@
         </button>
       </mat-menu>
     </mat-toolbar>
+
     <svg height="32" width="32" class="relative top-0 right-0">
       <path class="sidenav-svg" d="M 32,0 H -32,0 V 0,32 a 32, 32 0 0, 1 32,-32"></path>
     </svg>
