--- a/client/src/app/components/condutores/listar/listar-condutores.html
+++ b/client/src/app/components/condutores/listar/listar-condutores.html
@@ -1,6 +1,6 @@
 <section class="mx-auto max-w-screen-xl px-4">
   <div class="py-6">
-    <h2 class="text-2xl font-semibold">Listagem de Automoveis</h2>
+    <h2 class="text-2xl font-semibold">Listagem de Condutores</h2>
 
     <!-- Ações -->
     <div class="mt-4 grid grid-cols-1 sm:grid-cols-2 xl:grid-cols-6 gap-2">
@@ -16,28 +16,32 @@
 
     <hr class="my-6 border-muted/30" />
 
-    <!-- Cards de automoveis -->
+    <!-- Cards de condutores -->
     <div class="grid grid-cols-1 md:grid-cols-2 xl:grid-cols-3 gap-4">
-      @for (automovel of automoveis$ | async; track $index) {
+      @for (condutor of condutores$ | async; track $index) {
       <mat-card class="p-3 rounded-2xl shadow-sm">
         <mat-card-header class="pb-2">
           <mat-card-title class="text-lg font-medium">
-            {{ automovel.modelo }}
+            {{ condutor.nome }}
           </mat-card-title>
         </mat-card-header>
 
         <mat-card-content class="min-h-[40px] mt-3">
-          <p><span class="font-medium">Cor:</span> {{ automovel.cor }}</p>
-          <p><span class="font-medium">Marca:</span> {{ automovel.marca }}</p>
-          <p><span class="font-medium">Ano:</span> {{ automovel.ano }}</p>
+          <p><span class="font-medium">Telefone:</span> {{ condutor.telefone }}</p>
+          <p><span class="font-medium">Validade CNH:</span> {{ condutor.validadeCnh }}</p>
+          <p><span class="font-medium">Categoria:</span> {{ condutor.categoria }}</p>
+          <p>
+            <span class="font-medium">É Cliente:</span>
+            {{ condutor.eCliente ? 'Sim' : 'Não' }}
+          </p>
         </mat-card-content>
 
         <mat-card-actions align="end" class="flex items-center justify-end gap-2 pt-2">
-          <a [routerLink]="['editar', automovel.id]" mat-icon-button aria-label="Editar">
+          <a [routerLink]="['editar', condutor.id]" mat-icon-button aria-label="Editar">
             <mat-icon>edit</mat-icon>
           </a>
 
-          <a [routerLink]="['excluir', automovel.id]" mat-icon-button aria-label="Excluir">
+          <a [routerLink]="['excluir', condutor.id]" mat-icon-button aria-label="Excluir">
             <mat-icon>delete</mat-icon>
           </a>
         </mat-card-actions>
