--- a/client/src/app/components/condutores/editar/editar-condutor.html
+++ b/client/src/app/components/condutores/editar/editar-condutor.html
@@ -1,13 +1,14 @@
+@if (condutor$ | async) {
 <section class="mx-auto max-w-4xl px-4 py-6">
   <div>
-    <h2 class="text-2xl font-semibold">Cadastro de Condutor</h2>
+    <h2 class="text-2xl font-semibold">Edição de Condutor</h2>
     <hr class="my-4 border-muted/30" />
 
     <mat-card class="p-4 rounded-2xl shadow-sm">
-      <form [formGroup]="condutorForm" (ngSubmit)="cadastrar()">
+      <form [formGroup]="condutorForm" (ngSubmit)="editar()">
         <mat-card-header>
           <mat-card-title class="text-lg font-medium">
-            Preencha o formulário de cadastro
+            Preencha o formulário de edição
           </mat-card-title>
         </mat-card-header>
 
@@ -69,7 +70,7 @@
             <input formControlName="validadeCnh" matInput type="datetime" />
 
             @if (validadeCnh?.hasError('required')) {
-              <mat-error>A validade da CNH é obrigatório.</mat-error>
+            <mat-error>A validade da CNH é obrigatório.</mat-error>
             }
           </mat-form-field>
           <mat-checkbox formControlName="eCliente">
@@ -89,3 +90,4 @@
     </mat-card>
   </div>
 </section>
+}
