Corrigido bug de nao mostrar tipo de cliente na listagem de Cliente no front

--- a/client/src/app/components/clientes/listar/listar-clientes.html
+++ b/client/src/app/components/clientes/listar/listar-clientes.html
@@ -29,7 +29,7 @@
         <mat-card-content class="min-h-[40px] mt-3">
           <p><span class="font-medium">Telefone:</span> {{ cliente.telefone }}</p>
           <p><span class="font-medium">Documento:</span> {{ cliente.documento }}</p>
-          <p><span class="font-medium">Cliente:</span> {{ cliente.clienteTipo }}</p>
+          <p><span class="font-medium">Tipo Cliente:</span> {{ getTipoClienteTexto(cliente.tipoCliente) }}</p>
         </mat-card-content>
 
         <mat-card-actions align="end" class="flex items-center justify-end gap-2 pt-2">
