Implementado ir para listagem de Plano da pagina de inicio no front

--- a/client/src/app/components/inicio/inicio.html
+++ b/client/src/app/components/inicio/inicio.html
@@ -111,4 +111,23 @@
       </a>
     </mat-card-actions>
   </mat-card>
+  <mat-card class="classroom-card">
+    <a
+      routerLink="/planos"
+      class="card-hero block"
+      style="--hero-url: url('/img/card-header.webp')"
+    >
+      <mat-card-title class="card-hero__title">Plano</mat-card-title>
+    </a>
+
+    <mat-card-content></mat-card-content>
+
+    <mat-divider></mat-divider>
+
+    <mat-card-actions class="flex justify-end">
+      <a routerLink="/planos" mat-icon-button matTooltip="Ir para Planos">
+        <mat-icon>arrow_outward</mat-icon>
+      </a>
+    </mat-card-actions>
+  </mat-card>
 </div>
