--- a/client/src/app/components/planos/listar/listar-planos.html
+++ b/client/src/app/components/planos/listar/listar-planos.html
@@ -16,12 +16,12 @@
 
     <hr class="my-6 border-muted/30" />
 
-    <!-- Cards de automoveis -->
+    <!-- Cards de planos -->
     <div class="grid grid-cols-1 md:grid-cols-2 xl:grid-cols-3 gap-4">
       @for (plano of planos$ | async; track $index) {
       <mat-card class="p-3 rounded-2xl shadow-sm">
         <mat-card-header class="pb-2">
-          <mat-card-title class="text-lg font-medium"> Grupo: 
+          <mat-card-title class="text-lg font-medium"> Grupo:
             {{ plano.grupoAutomovel.nome }}
           </mat-card-title>
         </mat-card-header>
