--- a/client/src/app/components/planos/listar/listar-planos.html
+++ b/client/src/app/components/planos/listar/listar-planos.html
@@ -21,7 +21,7 @@
       @for (plano of planos$ | async; track $index) {
       <mat-card class="p-3 rounded-2xl shadow-sm">
         <mat-card-header class="pb-2">
-          <mat-card-title class="text-lg font-medium"> Grupo:
+          <mat-card-title class="text-lg font-medium"> Grupo do Plano:
             {{ plano.grupoAutomovel.nome }}
           </mat-card-title>
         </mat-card-header>
