--- a/client/src/app/components/automoveis/listar/listar-automoveis.html
+++ b/client/src/app/components/automoveis/listar/listar-automoveis.html
@@ -2,27 +2,32 @@
   <div class="py-6">
     <h2 class="text-2xl font-semibold">Listagem de Automóveis</h2>
 
-    <!-- Ações -->
-    <div class="mt-4 grid grid-cols-1 sm:grid-cols-2 xl:grid-cols-6 gap-2">
+    <!-- Linha com Cadastro (esquerda) e Filtro (direita) -->
+    <div class="mt-4 flex flex-col sm:flex-row sm:items-center sm:justify-between gap-4">
       <a
         mat-flat-button
-        class="col-span-1 flex items-center justify-center gap-2 h-10"
+        class="flex items-center justify-center gap-2 h-10 rounded-xl w-full sm:w-auto"
         routerLink="cadastrar"
       >
         <mat-icon class="!text-base">add</mat-icon>
         Cadastrar
       </a>
-    </div>
 
-    <!-- Filtro por Grupo -->
-    <mat-form-field appearance="fill" class="col-span-2 mt-4">
-      <mat-label>Filtrar por Grupo</mat-label>
-      <mat-select (selectionChange)="filtrarPorGrupo($event.value)">
-        @for (grupo of (grupos$ | async); track grupo.id) {
-          <mat-option [value]="grupo.id">{{ grupo.nome }}</mat-option>
-        }
-      </mat-select>
-    </mat-form-field>
+      <mat-form-field
+        appearance="fill"
+        class="w-full sm:w-48 rounded-xl !pb-0"
+      >
+        <mat-label>Filtrar por Grupo</mat-label>
+        <mat-select (selectionChange)="filtrarPorGrupo($event.value)">
+          @for (grupo of (grupos$ | async); track grupo.id) {
+            <mat-option [value]="grupo.id">
+              {{ grupo.nome }}
+            </mat-option>
+          }
+        </mat-select>
+      </mat-form-field>
+
+    </div>
 
     <hr class="my-6 border-muted/30" />
 
