Implementado botao para ir a edicao de Config na navbar superior

--- a/client/src/app/components/shared/shell/shell.component.html
+++ b/client/src/app/components/shared/shell/shell.component.html
@@ -62,7 +62,7 @@
         class="ml-auto flex items-center gap-2 rounded-xl"
       >
         <mat-icon>settings</mat-icon>
-        Configurações de Preco
+        Configurações de Preço
       </a>
 
       <button mat-raised-button [matMenuTriggerFor]="opcoesUsuario" class="ml-auto">
