--- a/client/src/app/components/shared/shell/shell.component.html
+++ b/client/src/app/components/shared/shell/shell.component.html
@@ -65,6 +65,10 @@
           <mat-icon>arrow_backwards</mat-icon>
           Logout
         </button>
+        <button mat-menu-item style="min-width: 160px"  routerLink="/funcionarios/auto-editar">
+          <mat-icon>arrow_backwards</mat-icon>
+          Auto Editar
+        </button>
         <button mat-menu-item style="min-width: 160px"  routerLink="/configuracoes">
           <mat-icon>arrow_backwards</mat-icon>
           Config
