Adicionado imagens do front

--- a/client/src/app/components/inicio/inicio.html
+++ b/client/src/app/components/inicio/inicio.html
@@ -39,7 +39,7 @@
     <a
       routerLink="/grupo-automoveis"
       class="card-hero block"
-      style="--hero-url: url('/img/card-header.webp')"
+      style="--hero-url: url('/img/card-header.png')"
     >
       <mat-card-title class="card-hero__title">Grupo de Automovel</mat-card-title>
     </a>
@@ -58,7 +58,7 @@
     <a
       routerLink="/automoveis"
       class="card-hero block"
-      style="--hero-url: url('/img/card-header.webp')"
+      style="--hero-url: url('/img/card-header.png')"
     >
       <mat-card-title class="card-hero__title">Automovel</mat-card-title>
     </a>
@@ -77,7 +77,7 @@
     <a
       routerLink="/condutores"
       class="card-hero block"
-      style="--hero-url: url('/img/card-header.webp')"
+      style="--hero-url: url('/img/card-header.png')"
     >
       <mat-card-title class="card-hero__title">Condutor</mat-card-title>
     </a>
@@ -96,7 +96,7 @@
     <a
       routerLink="/clientes"
       class="card-hero block"
-      style="--hero-url: url('/img/card-header.webp')"
+      style="--hero-url: url('/img/card-header.png')"
     >
       <mat-card-title class="card-hero__title">Cliente</mat-card-title>
     </a>
@@ -115,7 +115,7 @@
     <a
       routerLink="/planos"
       class="card-hero block"
-      style="--hero-url: url('/img/card-header.webp')"
+      style="--hero-url: url('/img/card-header.png')"
     >
       <mat-card-title class="card-hero__title">Plano</mat-card-title>
     </a>
@@ -134,7 +134,7 @@
     <a
       routerLink="/taxas"
       class="card-hero block"
-      style="--hero-url: url('/img/card-header.webp')"
+      style="--hero-url: url('/img/card-header.png')"
     >
       <mat-card-title class="card-hero__title">Taxa</mat-card-title>
     </a>
@@ -153,7 +153,7 @@
     <a
       routerLink="/funcionarios"
       class="card-hero block"
-      style="--hero-url: url('/img/card-header.webp')"
+      style="--hero-url: url('/img/card-header.png')"
     >
       <mat-card-title class="card-hero__title">Funcionario</mat-card-title>
     </a>
