--- a/client/src/app/components/inicio/inicio.html
+++ b/client/src/app/components/inicio/inicio.html
@@ -149,23 +149,25 @@
       </a>
     </mat-card-actions>
   </mat-card>
-  <mat-card class="classroom-card">
-    <a
-      routerLink="/funcionarios"
-      class="card-hero block"
-      style="--hero-url: url('/img/card-header.png')"
-    >
-      <mat-card-title class="card-hero__title">Funcionario</mat-card-title>
-    </a>
-
-    <mat-card-content></mat-card-content>
-
-    <mat-divider></mat-divider>
-
-    <mat-card-actions class="flex justify-end">
-      <a routerLink="/funcionarios" mat-icon-button matTooltip="Ir para Funcionarios">
-        <mat-icon>arrow_outward</mat-icon>
+  @if (auth.usuarioEhEmpresa$ | async) {
+    <mat-card class="classroom-card">
+      <a
+        routerLink="/funcionarios"
+        class="card-hero block"
+        style="--hero-url: url('/img/card-header.png')"
+      >
+        <mat-card-title class="card-hero__title">Funcionario</mat-card-title>
       </a>
-    </mat-card-actions>
-  </mat-card>
+
+      <mat-card-content></mat-card-content>
+
+      <mat-divider></mat-divider>
+
+      <mat-card-actions class="flex justify-end">
+        <a routerLink="/funcionarios" mat-icon-button matTooltip="Ir para Funcionarios">
+          <mat-icon>arrow_outward</mat-icon>
+        </a>
+      </mat-card-actions>
+    </mat-card>
+  }
 </div>
