Implementado ir para listagem de Aluguel da pagina de inicio no front

--- a/client/src/app/components/inicio/inicio.html
+++ b/client/src/app/components/inicio/inicio.html
@@ -170,4 +170,23 @@
       </mat-card-actions>
     </mat-card>
   }
+  <mat-card class="classroom-card">
+    <a
+      routerLink="/alugueis"
+      class="card-hero block"
+      style="--hero-url: url('/img/card-header.png')"
+    >
+      <mat-card-title class="card-hero__title">Aluguel</mat-card-title>
+    </a>
+
+    <mat-card-content></mat-card-content>
+
+    <mat-divider></mat-divider>
+
+    <mat-card-actions class="flex justify-end">
+      <a routerLink="/alugueis" mat-icon-button matTooltip="Ir para Alugueis">
+        <mat-icon>arrow_outward</mat-icon>
+      </a>
+    </mat-card-actions>
+  </mat-card>
 </div>
