Corrigido bug da exclusao de Aluguel no front

--- a/client/src/app/components/alugueis/excluir/excluir-aluguel.html
+++ b/client/src/app/components/alugueis/excluir/excluir-aluguel.html
@@ -14,7 +14,7 @@
 
         <mat-card-content class="p-0">
           <p class="text-sm text-gray-700">
-            Você deseja realmente excluir o registro do cliente: "{{ aluguel.cliente.nome }}"? Esta ação é
+            Você deseja realmente excluir o aluguel? Esta ação é
             irreversível...
           </p>
         </mat-card-content>
